--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "normalize.css": "~3.0.3",
     "object-assign": "^2.0.0",
     "react": "~0.13.3",
-    "react-router": "^0.11.6",
+    "react-router": "^0.13.x",
     "url-loader": "^0.5.6"
   },
   "devDependencies": {
