--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "object-assign": "^2.0.0",
     "react": "~0.13.3",
     "react-router": "^0.13.x",
+    "react-wysiwyg-editor": "0.0.6",
     "url-loader": "^0.5.6"
   },
   "devDependencies": {
