--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "events": "^1.0.2",
     "file-loader": "^0.8.4",
     "flux": "^2.0.1",
+    "lodash": "^3.10.0",
     "normalize.css": "~3.0.3",
     "object-assign": "^2.0.0",
     "react": "~0.13.3",
