--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "events": "^1.0.2",
     "file-loader": "^0.8.4",
     "flux": "^2.0.1",
+    "medium-editor": "^5.3.0",
     "normalize.css": "~3.0.3",
     "object-assign": "^2.0.0",
     "react": "~0.13.3",
+    "react-medium-editor": "^1.3.0",
     "react-router": "^0.13.x",
-    "react-wysiwyg-editor": "0.0.6",
     "url-loader": "^0.5.6"
   },
   "devDependencies": {
