--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-loader": "^0.8.4",
     "flux": "^2.0.1",
     "medium-editor": "^5.3.0",
+    "lodash": "^3.10.0",
     "normalize.css": "~3.0.3",
     "object-assign": "^2.0.0",
     "react": "~0.13.3",
