--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
+    "classnames": "^2.1.3",
     "events": "^1.0.2",
     "file-loader": "^0.8.4",
     "flux": "^2.0.1",
-    "medium-editor": "^5.3.0",
     "lodash": "^3.10.0",
+    "medium-editor": "^5.3.0",
     "normalize.css": "~3.0.3",
     "object-assign": "^2.0.0",
     "react": "~0.13.3",
