--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
+    "axios": "^0.5.4",
     "classnames": "^2.1.3",
     "events": "^1.0.2",
     "file-loader": "^0.8.4",
