--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^1.3.0",
+    "axios": "^0.5.4",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
